AC_INIT( isic.c )

AC_PROG_CC
AC_PROG_INSTALL

dnl Bah.... Quick hack to fine libnet
PREFIX=/usr/local
AC_CHECK_FILE($PREFIX/lib/libnet.a, [FOO=$LIBS; CFLAGS="$CFLAGS -I$PREFIX/include" LIBS="-L$PREFIX/lib $LIBS"])
AC_HAVE_LIBRARY(net, [DEFINES= ] ,
  AC_MSG_ERROR([Cannot find libnet...  please get it from
	http://www.packetfactory.net/projects/libnet]))
AC_CHECK_LIB(net, libnet_init)


AC_CHECK_TYPE(u_int16_t, [unsigned short])
AC_CHECK_TYPE(u_int32_t, [unsigned long])
AC_CHECK_TYPE(in_addr_t, u_int32_t)

AC_PROG_GCC_TRADITIONAL

AC_OUTPUT(Makefile)
